--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-#spring.application.name=spring RESTful API
-spring.application.name=spring-restful-api
 spring.datasource.url=jdbc:mysql://localhost:3306/online_store
 spring.datasource.username=root
 spring.datasource.password=korie123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-server.port=8081
-
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Tambahkan ini untuk debugging
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
